--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pcs7toolbox",
+  "name": "PCS7Toolbox",
   "version": "1.0.0",
   "description": "Toolbox for Siemens PCS7 through export/import files",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "extends": "standard"
   },
   "dependencies": {
-    "pcs7toolbox": "file:"
+    "pcs7toolbox": "file:",
+    "PCS7Toolbox": "file:"
   }
 }
